新增多项功能
核心破解、去除上层显示、允许截图、允许不信任触摸、自定义媒体音阶、双击状态栏锁屏、自定义快速设置行列数

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,38 @@
     <string name="are_you_sure_reboot_scope">Are you sure to reboot all scope?</string>
     <string name="participate_in_translation">Participate in translation</string>
     <string name="participate_in_translation_summary">Help us translate the app into your language</string>
+    <string name="scope_android">System Framework</string>
+    <string name="corepacth">Remove restrictions</string>
+    <string name="downgr">Allow downgrade</string>
+    <string name="downgr_summary">Allow downgrade applications.</string>
+    <string name="authcreak">Disable digest verify</string>
+    <string name="authcreak_summary">Allows install apps after modify file in apk (ignore invalid digest error).</string>
+    <string name="digestCreak">Disable compare signatures</string>
+    <string name="digestCreak_summary">Allow re-install app with different signatures.</string>
+    <string name="UsePreSig">Use installed signatures</string>
+    <string name="UsePreSig_summary">Always use signatures from already installed apps when installing. This is extremely dangerous. Only enable when really needed!</string>
+    <string name="enhancedMode">Enhanced Mode</string>
+    <string name="enhancedMode_summary">Pass some validation in the application</string>
+    <string name="disable_flag_secure">Allow screenshot</string>
+    <string name="disable_flag_secure_summary">Allow screenshot in software that does not allow to Support adding drop-down quick setting on Control center for security</string>
+    <string name="delete_on_post_notification">Remove display over notification</string>
+    <string name="delete_on_post_notification_summary">Remove \"This app is displaying over other apps\" notification</string>
+    <string name="allow_untrusted_touches">"Allow untrusted touches"</string>
+    <string name="take_effect_after_reboot">Take effect after reboot</string>
+    <string name="sound">Sound</string>
+    <string name="media_volume_steps_switch">Media volume steps</string>
+    <string name="media_volume_steps_summary">Turning on may cause the scrolling of the volume bar to freeze or the Bluetooth volume to be abnormal</string>
+    <string name="scope">Scope</string>
+    <string name="scope_android_summary">After enabling the module for the first time or the module is updated, the feature here will take effect after restarting the system</string>
+    <string name="scope_systemui">SystemUI</string>
+    <string name="scope_systemui_summary">Customize system interface, status bar, lock screen, etc.</string>
+    <string name="statusbar">Status bar</string>
+    <string name="double_tap_to_sleep">Double tap to sleep</string>
+    <string name="quick_settings_panel">Quick settings panel</string>
+    <string name="qs_custom_switch">Custom rows and columns</string>
+    <string name="qs_custom_rows">Rows</string>
+    <string name="qs_custom_rows_horizontal">Rows (horizontal)</string>
+    <string name="qs_custom_columns">Columns</string>
+    <string name="qs_custom_columns_unexpanded">Columns (Unexpanded)</string>
+    <string name="qs_custom_switch_summary">The specific upper limit is determined by the display density</string>
 </resources>
