修改模块描述为ColorOS12

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Más desarrolladores están invitados a participar en el proyecto</string>
     <string name="issues">Comentarios/Sugerencias</string>
     <string name="issues_url">Clic para ver errores en GitHub</string>
-    <string name="xposeddescription">Herramienta de personalización para MIUI13 (Android 12)</string>
+    <string name="xposeddescription">Herramienta de personalización para  ColorOS12 (Android 12)</string>
     <string name="main_switch">Interruptor principal del módulo</string>
     <string name="menu">Menú</string>
     <string name="Tips">Consejos</string>
