--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -9,7 +9,7 @@
     <string name="github_url">Welkom meer ontwikkelaars om deel te nemen in de ontwikkeling</string>
     <string name="issues">Feedback/Voorstel</string>
     <string name="issues_url">Klik om GitHub Problemen te bekijken</string>
-    <string name="xposeddescription">Aanpassingsgereedschap voor MIUI13(Android 12)</string>
+    <string name="xposeddescription">Aanpassingsgereedschap voor ColorOS12(Android 12)</string>
     <string name="main_switch">Module hoofdschakelaar</string>
     <string name="Tips">Hint</string>
     <string name="HideLauncherIcon">Verberg Launcher icoon</string>
