--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Sunt bineveniți mai mulți dezvoltatori să participe la dezvoltare</string>
     <string name="issues">Feedback/Propunere</string>
     <string name="issues_url">Clic pentru a vizualiza problemele pe GitHub</string>
-    <string name="xposeddescription">Instrument de personalizare pentru MIUI13 (Android 12)</string>
+    <string name="xposeddescription">Instrument de personalizare pentru  ColorOS12 (Android 12)</string>
     <string name="main_switch">Comutatorul principal al modulului</string>
     <string name="menu">Meniu</string>
     <string name="Tips">Sfaturi</string>
