--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Приглашаем больше разработчиков принять участие в разработке</string>
     <string name="issues">Обратная связь</string>
     <string name="issues_url">Нажмите, чтобы просмотреть обсуждение на GitHub</string>
-    <string name="xposeddescription">Инструмент настройки для MIUI13 (Android 12)</string>
+    <string name="xposeddescription">Инструмент настройки для  ColorOS12 (Android 12)</string>
     <string name="main_switch">Вкл/Выкл модуль</string>
     <string name="menu">Варианты перезагрузки</string>
     <string name="Tips">Подсказка</string>
