--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">欢迎更多开发者共同参与开发</string>
     <string name="issues">反馈/提议</string>
     <string name="issues_url">点击查看GitHub Issues</string>
-    <string name="xposeddescription">基于 MIUI13(Android 12) 适配的自定义工具</string>
+    <string name="xposeddescription">基于 ColorOS12(Android 12) 适配的自定义工具</string>
     <string name="main_switch">模块总开关</string>
     <string name="menu">菜单</string>
     <string name="Tips">提示</string>
