--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Bienvenue à d\'autres développeurs pour participer au développement</string>
     <string name="issues">Feed-back/Proposition</string>
     <string name="issues_url">Cliquez pour voir GitHub</string>
-    <string name="xposeddescription">Outil de personnalisation pour MIUI13(Android 12)</string>
+    <string name="xposeddescription">Outil de personnalisation pour ColorOS12(Android 12)</string>
     <string name="main_switch">Interrupteur Généra</string>
     <string name="Tips">Conseils</string>
     <string name="HideLauncherIcon">Masquer l\'icône en Homepage</string>
