--- a/app/src/main/res/values-id/strings.xml
+++ b/app/src/main/res/values-id/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Selamat datang lebih banyak developer untuk berpartisipasi dalam pengembangan</string>
     <string name="issues">Umpan Balik/Usulan</string>
     <string name="issues_url">Klik untuk melihat Masalah GitHub</string>
-    <string name="xposeddescription">Alat perubahan untuk MIUI13 (Android 12)</string>
+    <string name="xposeddescription">Alat perubahan untuk ColorOS12 (Android 12)</string>
     <string name="main_switch">Tombol modul</string>
     <string name="HideLauncherIcon">Sembunyikan ikon launcher</string>
     <string name="matters_needing_attention">Fitur tidak berjalan? </string>
