--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">Chào mừng các nhà phát triển tham gia vào quá trình phát triển</string>
     <string name="issues">Phản hồi/Đề xuất</string>
     <string name="issues_url">Ấn để xem GitHub Issues</string>
-    <string name="xposeddescription">Công cụ tuỳ chỉnh hoá MIUI13(Android 12)</string>
+    <string name="xposeddescription">Công cụ tuỳ chỉnh hoá ColorOS12(Android 12)</string>
     <string name="main_switch">Công tắc module</string>
     <string name="Tips">Mẹo</string>
     <string name="HideLauncherIcon">Ẩn biểu tượng ứng dụng này khỏi màn hình chính</string>
