--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -10,7 +10,7 @@
     <string name="github_url">開発に参加できる開発者を歓迎します</string>
     <string name="issues">ご意見・ご提案</string>
     <string name="issues_url">クリックして GitHub Issues を表示する</string>
-    <string name="xposeddescription">MIUI13(Android 12)のカスタマイズツール</string>
+    <string name="xposeddescription">ColorOS12(Android 12)のカスタマイズツール</string>
     <string name="main_switch">モジュールのメインスイッチ</string>
     <string name="menu">メニュー</string>
     <string name="Tips">注意事項</string>
