--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,9 +77,13 @@
     <string name="scope_other_summary">Phone Manager, Battery and performance, etc.</string>
     <string name="scope_phone_manager">Phone Manager</string>
     <string name="scope_launcher">Launcher</string>
-    <string name="unlock_the_limit_on_the_number_of_recent_task_locks">Unlock the limit on the number of recent task locks</string>
+    <string name="unlock_recent_task_locks_quantity">Unlock the limit on the number of recent task locks</string>
     <string name="launcher_more_layout">More layout</string>
     <string name="launcher_more_layout_summary">More layout options(3x5 ~ 6x7).</string>
     <string name="launcher_remove_update_dot">Remove APP update dot</string>
     <string name="launcher_remove_update_dot_summary">Undisplay a dot next to the name of updated apps.</string>
+    <string name="scope_security_center">Security Center</string>
+    <string name="unlock_self_start_quantity">Unlock self start quantity</string>
+    <string name="hide_prompt_view">Hide Prompt view</string>
+    <string name="hide_prompt_view_summary">When turned on, the hint of the colored capsule shape will be hidden.Such as background recording, background calling, screen casting ...</string>
 </resources>
