--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="remove_usb_debugging">Remove USB debugging</string>
     <string name="remove_vpn_activated">Remove VPN activated</string>
     <string name="remove_dev_mode_is_on">Remove DEV mode is ON</string>
+    <string name="remove_footer_security_warn">Remove footer security warn</string>
 </resources>
